--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "production": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "ava"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
+    "ava": "^0.13.0",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
